# FinAI

./: .dockerignore  .env.example  .gitignore  BRAINSTORM_RESULT.md  Dockerfile  Makefile  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
.github/workflows/: daily-data.yml  deploy.yml  health-check.yml  test.yml  weekly-train.yml
api/: __init__.py  dependencies.py  main.py
api/routers/: backtest.py  dashboard.py  models.py  monitoring.py  pipeline.py  stocks.py
backtest/: __init__.py  costs.py  engine.py  metrics.py  portfolio.py
configs/: backtest_config.yaml  data_sources.yaml  model_params.yaml  monitoring.yaml
data/collectors/: __init__.py  financials.py  price.py  universe.py
data/loaders/: __init__.py  schema.sql  schema_sqlite.sql  sqlite_loader.py  supabase.py
frontend/: Dockerfile  package-lock.json  package.json  vite-plugin-autostart-api.ts  vite.config.ts
models/: __init__.py  baseline.py  ensemble.py  lightgbm_model.py  scoring.py  training.py  tree_models.py
monitoring/: __init__.py  alerts.py  health.py  tracker.py
scripts/: daily_update.py  health_check.py  monthly_report.py  setup_db.py  setup_supabase.py  weekly_retrain.py
tests/: conftest.py  test_api.py  test_baseline.py  test_cleaning.py  test_costs.py  test_docker.py  test_engine.py  test_ensemble.py  test_features.py  test_financials.py  test_integration.py  test_metrics.py  test_monitoring.py  test_optuna_integration.py  test_pipeline_instrumentation.py  test_portfolio.py  test_price_collector.py  test_training.py  test_tree_models.py  test_universe.py
(+20 files in other folders)
