[project]
name = "finai"
version = "0.1.0"
description = "Taiwan Stock AI Analysis Platform"
requires-python = ">=3.10"
dependencies = [
    # Data
    "yfinance>=0.2.31",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",

    # ML
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "optuna>=3.4.0",

    # Technical Analysis
    "ta>=0.11.0",

    # Database
    "supabase>=2.0.0",

    # API
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",

    # Utils
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["api", "backtest", "data", "models"]
omit = ["*/__main__.py", "*/test_*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]
